# zinnia

./: .gitignore  .mypy.ini  .ruff.toml  Cargo.toml  README.md  fibonacci.py  main.py  pyproject.toml  requirements.txt  setup.py  sha256.py  sum_over_array.py  type-check.sh
ROADMAP/: 04-lazy-views.md  05-array-semantics-testing.md
benchmarking/: benchmarker_ablation.py  benchmarker_cairo.py  benchmarker_circ.py  benchmarker_halo2.py  benchmarker_noir.py  benchmarker_risc0.py  benchmarker_scale.py  benchmarker_sp1.py  hypothesis_test.py  loc_counter.py  plotter.py  plotter_for_paper.py  plotter_loc.py  plotter_scale.py  results-abalation.json  results-ablation-1.json  results-ablation-2.json  results-ablation-3.json  results-ablation-4.json  results-ablation.json  results-cairo.json  results-circ-optimizer.json  results-noir.json  results-risc0.json  results-scale-2.json  results-scale.json  results-sp1.json  results.json  table_generator.py
benchmarking/_histogram/: _histogram.py
benchmarking/adi/: adi.py
benchmarking/allpairs/: allpairs.py
benchmarking/allpairs_distances/: allpairs_distances.py
benchmarking/allpairs_distances_loops/: allpairs_distances_loops.py
benchmarking/another_quicksort/: another_quicksort.py
benchmarking/approximated_callgraph/: approximated_callgraph.py
benchmarking/arc_distance/: arc_distance.py
benchmarking/arc_distance_list/: arc_distance_list.py
benchmarking/atax/: atax.py
benchmarking/azimint_hist/: azimint_hist.py
benchmarking/azimint_naive/: azimint_naive.py
benchmarking/babylonian/: babylonian.py
benchmarking/bicg/: bicg.py
benchmarking/blacksholes/: blacksholes.py
benchmarking/brownian/: brownian.py
benchmarking/bubble_sort/: bubble_sort.py
benchmarking/build_system/: build_system.py
benchmarking/calculate_u/: calculate_u.py
benchmarking/cavity_flow/: cavity_flow.py
benchmarking/caxpy/: caxpy.py
benchmarking/ccopy/: ccopy.py
benchmarking/cdotc/: cdotc.py
benchmarking/cdotu/: cdotu.py
benchmarking/channel_flow/: channel_flow.py
benchmarking/check_mask/: check_mask.py
benchmarking/cholesky/: cholesky.py
benchmarking/cholesky2/: cholesky2.py
benchmarking/clip/: clip.py
benchmarking/clip2/: clip2.py
benchmarking/collatz/: collatz.py
benchmarking/collatz_modified/: collatz_modified.py
docs/: HSBC_Release_Guide.md  Zinnia Docs.md  dynamic_array_zkram_lowering.md  helpers.md  type_system_and_phi_lattice.md
docs-site/: package-lock.json  package.json
examples/: __init__.py  aml_structuring_detection_proof.py  dynamic_bounded_array.py  fibonacci.py  find_nearest_point.py  flow_sensitive_typing.py  matrix_dot_prod.py  membership_proof.py  private_credit_policy_check.py  private_kpi_benchmarking.py  proof_of_solvency.py  sanctions_pep_screening.py  utils.py
pyzk/: __init__.py  pyzk_interface.py
src/: backend.rs  builder.rs  circuit_input.rs  dyn_ndarray.rs  error.rs  ir.rs  ir_ctx.rs  ir_defs.rs  ir_gen.rs  lib.rs  mock_exec.rs  scope.rs  types.rs
src/ast/: mod.rs
tools/: fuzz_differential.py  profile_one.py  sweep_benchmarks.py  verification_ab.py
zenopy/: __init__.py  zenopy_interface.py
zinnia/: __init__.py
(+3221 files in other folders)
