[package]
name = "zinnia_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_zinnia_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pythonize = "0.23"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
