[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zinnia"
version = "0.0.1"
description = "A compiler for compiling Python code to low-level zero-knowledge circuit."
authors = [{name = "CipherInsight Ltd."}]
requires-python = ">=3.10"
readme = "README.md"

[tool.maturin]
module-name = "zinnia._zinnia_core"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["testing"]
cache_dir = ".pytest_cache"
